# final

./: .env.example  .gitignore  README.md  gunicorn_conf.py  pyproject.toml
backend/: repo_export.txt
docs/: agent_interface_spec.txt
research.inc/: export_env_simple.sh  package.json  pnpm-lock.yaml
research.inc/src/components/chat/: Chat.tsx  MessageItem.tsx
research.inc/src/components/providers/: WebSocketProvider.tsx
research.inc/src/contexts/: WebSocketContext.tsx
research.inc/src/types/: chat.ts
src/: .env.example
src/agent/: __init__.py  agent.py  code_executor.py  llm.py  main.py  prompts.py  server.py  state_manager.py  tools.py
src/researchinc/: __init__.py  main.py
src/researchinc/domain/: models.py
src/researchinc/presentation/websocket/rest/: websocket_controller.py
src/researchinc/repositories/: project_repository.py
src/researchinc/service/: agent.py  code_executor.py  llm.py  project_manager.py  prompts.py  tools.py
src/researchinc/utils/: logging_config.py
src/tests/: conftest.py
src/tests/integration/: test_project_repository_integration.py  test_search_agent_integration.py  test_search_web_integration.py  test_websocket_controller_integration.py
src/tests/unit/: test_code_executor.py  test_start_agent_loop_unit.py
static/: index.html  styles.css
